[gd_scene load_steps=17 format=3 uid="uid://dd15sdagi3yeb"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_nxcne"]
[ext_resource type="PackedScene" uid="uid://2qa7nlw51tan" path="res://Scenes/ui.tscn" id="2_v4d1a"]
[ext_resource type="PackedScene" uid="uid://phuekkypyokb" path="res://Scenes/square.tscn" id="3_edg6o"]
[ext_resource type="Script" path="res://Scripts/win_check.gd" id="4_vb1hq"]
[ext_resource type="Script" path="res://Scripts/ai.gd" id="5_dmki4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oef75"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5oohn"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ci1xg"]
sky_material = SubResource("ProceduralSkyMaterial_5oohn")

[sub_resource type="Environment" id="Environment_4ywod"]
background_mode = 1
background_energy_multiplier = 0.0
sky = SubResource("Sky_ci1xg")
ambient_light_source = 2
ambient_light_color = Color(0.446777, 0.446777, 0.446777, 1)
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_light_energy = 0.5
fog_density = 0.0

[sub_resource type="Animation" id="Animation_am3os"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-5, 5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.436332, -0.785398, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}

[sub_resource type="Animation" id="Animation_ydefg"]
resource_name = "play_game"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-5, 5, 5), Vector3(0, 10, 10), Vector3(0, 10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.436332, -0.785398, 0), Vector3(-0.436332, 0, 0), Vector3(-1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5nuce"]
resource_name = "rotate"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 50.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8lxa"]
_data = {
"RESET": SubResource("Animation_am3os"),
"play_game": SubResource("Animation_ydefg"),
"rotate": SubResource("Animation_5nuce")
}

[sub_resource type="Animation" id="Animation_mbplr"]
resource_name = "play_game"
length = 4.0

[sub_resource type="Animation" id="Animation_7cg1e"]
resource_name = "rotate"
length = 5.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pypu"]
_data = {
"play_game": SubResource("Animation_mbplr"),
"rotate": SubResource("Animation_7cg1e")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_nxcne")

[node name="UI_Canvas" parent="." instance=ExtResource("2_v4d1a")]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0)
light_energy = 5.673
light_size = 1.0
light_specular = 9.023
spot_range = 100.0

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0)
material_override = SubResource("StandardMaterial3D_oef75")
size = Vector3(200, 0.001, 200)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
visible = false
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4ywod")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.298836, -0.640856, 0, 0.906308, 0.422618, 0.707107, -0.298836, 0.640856, -5, 5, 5)
current = true
fov = 100.0

[node name="LayerOne" type="Node3D" parent="."]

[node name="Square0" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="Square1" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -2)

[node name="Square2" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Square3" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2)

[node name="Square4" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1)

[node name="Square5" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="Square6" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Square7" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="Square8" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="Square9" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="Square10" parent="LayerOne" instance=ExtResource("3_edg6o")]

[node name="Square11" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Square12" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1)

[node name="Square13" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="Square14" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Square15" parent="LayerOne" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="LayerTwo" type="Node3D" parent="."]

[node name="Square0" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -2)

[node name="Square1" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -2)

[node name="Square2" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)

[node name="Square3" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -2)

[node name="Square4" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -1)

[node name="Square5" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -1)

[node name="Square6" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="Square7" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)

[node name="Square8" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)

[node name="Square9" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="Square10" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Square11" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)

[node name="Square12" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 1)

[node name="Square13" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 1)

[node name="Square14" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)

[node name="Square15" parent="LayerTwo" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1)

[node name="LayerThree" type="Node3D" parent="."]

[node name="Square0" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, -2)

[node name="Square1" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -2)

[node name="Square2" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)

[node name="Square3" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -2)

[node name="Square4" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, -1)

[node name="Square5" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -1)

[node name="Square6" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1)

[node name="Square7" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -1)

[node name="Square8" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 0)

[node name="Square9" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 0)

[node name="Square10" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Square11" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 0)

[node name="Square12" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 1)

[node name="Square13" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 1)

[node name="Square14" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1)

[node name="Square15" parent="LayerThree" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 1)

[node name="LayerFour" type="Node3D" parent="."]

[node name="Square0" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -2)

[node name="Square1" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 3, -2)

[node name="Square2" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -2)

[node name="Square3" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, -2)

[node name="Square4" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -1)

[node name="Square5" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 3, -1)

[node name="Square6" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -1)

[node name="Square7" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, -1)

[node name="Square8" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 0)

[node name="Square9" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 3, 0)

[node name="Square10" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="Square11" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 0)

[node name="Square12" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 1)

[node name="Square13" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 3, 1)

[node name="Square14" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1)

[node name="Square15" parent="LayerFour" instance=ExtResource("3_edg6o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 1)

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8lxa")
}

[node name="CubeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4pypu")
}

[node name="WinCheck" type="Node3D" parent="."]
script = ExtResource("4_vb1hq")


[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Ai" type="Node" parent="."]
script = ExtResource("5_dmki4")
[connection signal="animation_finished" from="CameraAnimationPlayer" to="." method="_on_animation_player_animation_finished"]
